@startuml App.Filter.Initialization

namespace View {
    class CommandFactory

    interface ICommand
    class FilterCommand

    ICommand <|.l.FilterCommand

    CommandFactory --> FilterCommand : <<instantiates>>

    FilterCommand --> Application.FilterApp
    FilterCommand --> Application.FilterConfig : <<instantiates>>
}

'View.HelpCommand --> Framework.System.Console

namespace Application {
    class FilterApp
    class FilterConfig

    FilterConfig o-r- FilterApp

    FilterApp *-d- Domain.InputStreamFactory
    FilterApp *-d- Domain.DltDumpTraceReaderFactory
    FilterApp o-d- Domain.IInputStream
    FilterApp *-d- Domain.IOutputStream
}

namespace Domain {
    class InputStreamFactory
    interface IInputStream
    class DltDumpTraceReaderFactory
    interface IOutputStream

    InputStreamFactory -r-> IInputStream : <<instantiates>>
}

@enduml